# telegram-bot-game

./: .env  .gitignore  README.md  build.ps1  bunbuild.ts  clear.ps1  index.py  index.ts  package.json  pyproject.toml  requirements.txt  test.py  tsconfig.json
assets/: out.package.json
migrations/: README.md  chat.sql  game.sql  meta.sql  player.sql
monopoly/: Cargo.toml
monopoly/src/: game.rs  io.rs  lib.rs
monopoly/src/game/: board.rs
src/: begin_game.sql  begin_user.sql  board.py  buy_user.sql  command.py  db.py  dummy.sql  game.py  index.py  index.ts  lib.py  roll_user.sql  select.sql  start_user.sql  test.py
