[package]
name = "monopoly"
version = "0.1.0"
edition = "2021"

[lib]
name = "monopoly"
crate-type = ["cdylib"]

[dependencies]
joinery = "3.1.0"
lazy_format = "2.0.3"
pyo3 = { version = "0.21", features = ["extension-module"] }
rand = "0.8.5"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
